<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.trippin.androidtrippin.trippin.GetNameActivity"
    android:background="@color/white"
    android:id="@+id/getNameRelativeLayout"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/inputNameHeader"
        android:id="@+id/whatsYourNameText"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/firstNameHint"
        android:ems="10"
        android:textSize="16dp"
        android:id="@+id/firstNameTB"
        android:layout_marginTop="80dp"
        android:layout_below="@+id/whatsYourNameText"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/lastNameHint"
        android:textSize="16dp"
        android:ems="10"
        android:id="@+id/lastNameTB"
        android:layout_below="@+id/firstNameTB"
        android:layout_alignStart="@+id/firstNameTB"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:text="@string/NextButtonText"
        android:id="@+id/getNameNextButton"
        style="@style/buttonStyle"
        android:layout_marginBottom="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerVertical="true"
        />

</RelativeLayout>
