<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
                android:id="@+id/sign_up_profile_pic_main_layout"
    tools:context="com.trippin.androidtrippin.SignUpProfilePictureActivity"
    android:background="@color/white"
    android:weightSum="1">

    <!--<ImageView-->
        <!--android:layout_width="150dp"-->
        <!--android:layout_height="150dp"-->
        <!--android:id="@+id/signUpImageView"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="80dp"-->
        <!--android:src="@drawable/no_user_logo"-->
        <!--android:scaleType="fitCenter"-->
        <!--android:layout_marginBottom="10dp" />-->

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/signUpImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/no_user_logo"
        app:border_width="2dp"
        app:border_color="@color/accent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/addYourPhotoText"
        android:id="@+id/AddYourPhotoText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/signUpSkipText"
        android:id="@+id/skipText"
        android:textColor="@color/primary"
        android:layout_above="@+id/finishButton"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp"
        android:textSize="18dp"/>

    <Button
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:text="@string/signUpFinishText"
        android:id="@+id/finishButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        style="@style/buttonStyle"
        android:gravity="center_vertical|center_horizontal"
        />

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/selectButton"
        android:src="@drawable/ic_photo_library_accent"
        android:layout_marginRight="10dp"
        android:background="@color/transparent"
        android:layout_alignBottom="@+id/cameraButton"
        android:layout_toEndOf="@+id/skipText"/>

    <ImageButton
        android:layout_width="51dp"
        android:layout_height="44dp"
        android:id="@+id/cameraButton"
        android:src="@drawable/ic_photo_camera_accent"
        android:background="@color/transparent"
        android:layout_below="@+id/signUpImageView"
        android:layout_alignStart="@+id/signUpImageView"
        android:layout_marginLeft="10dp"/>


</RelativeLayout>
