<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/white"
                tools:context="com.trippin.androidtrippin.SignUpActivity"
                android:id="@+id/additional_information_rl">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/additionalInfoText"
        android:id="@+id/additional_information_title"
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:textColor="@color/primary"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Where are you from?"
        android:id="@+id/country_TV"
        android:textColor="@color/list_item_dark_gray"
        android:layout_below="@+id/additional_information_title"
        android:layout_alignStart="@+id/additional_information_title"
        android:layout_marginTop="30dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/countries_spinner"
        style="?android:attr/editTextStyle"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/country_TV"
        android:layout_alignStart="@+id/country_TV"
        android:layout_alignEnd="@+id/additional_information_title"
        android:layout_marginTop="5dp">
    </Spinner>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="What&apos;s your moto in life?"
        android:id="@+id/user_moto_TV"
        android:textColor="@color/list_item_dark_gray"
        android:layout_below="@+id/age_spinner"
        android:layout_alignStart="@+id/age_spinner"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/moto_hint"
        android:textSize="16dp"
        android:ems="10"
        android:id="@+id/user_moto_ET"
        android:textColor="@color/black"
        android:layout_below="@+id/user_moto_TV"
        android:layout_alignStart="@+id/user_moto_TV"
        android:layout_alignEnd="@+id/nextButtonInAdditionalInfo"/>

    <Button
        android:layout_width="220dp"
        android:text="@string/NextButtonText"
        android:id="@+id/nextButtonInAdditionalInfo"
        style="@style/buttonStyle"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/user_moto_ET"
        android:layout_height="35dp"
        android:layout_alignParentEnd="false"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="How old are you?"
        android:id="@+id/age_TV"
        android:textColor="@color/list_item_dark_gray"
        android:layout_below="@+id/countries_spinner"
        android:layout_alignStart="@+id/countries_spinner"
        android:layout_marginTop="30dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/age_spinner"
        android:spinnerMode="dropdown"
        style="?android:attr/editTextStyle"
        android:layout_below="@+id/age_TV"
        android:layout_alignStart="@+id/age_TV"
        android:layout_alignEnd="@+id/age_TV"
        android:layout_marginTop="5dp"/>


</RelativeLayout>

